--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,8 +7,24 @@ pool:
   vmImage: 'Ubuntu 16.04'
 
 variables:
-  imageName: 'petersendev/ocelot-gateway:$(build.buildId)'
+  imageName: 'petersendev/ocelot-gateway'
 
 steps:
-- script: docker build -t $(imageName) OcelotGateway
+
+- task: DotNetCoreCLI@2  
+  inputs:
+    command: custom
+    custom: tool
+    arguments: install --tool-path . nbgv
+  displayName: Install NBGV tool
+  condition: and(succeeded(), eq(variables['system.pullrequest.isfork'], false))
+
+- script: nbgv cloud
+  displayName: Set Version
+  condition: and(succeeded(), eq(variables['system.pullrequest.isfork'], false))
+
+- script: env
+  displayName: show env
+
+- script: docker build -t $(imageName):$(GitBuildVersionSimple) OcelotGateway
   displayName: 'docker build'
