--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,13 +11,10 @@ variables:
 
 steps:
 
-- task: DotNetCoreCLI@2  
+- task: petersendev.dotnet-global-tool-installer.DotnetGlobalToolInstaller.DotnetGlobalToolInstaller@0
+  displayName: '.NET Core Global Tool'
   inputs:
-    command: custom
-    custom: tool
-    arguments: install -g nbgv
-  displayName: Install NBGV tool
-  condition: and(succeeded(), eq(variables['system.pullrequest.isfork'], false))
+    name: nbgv
 
 - script: nbgv cloud
   displayName: Set Version
