--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,8 +28,8 @@ steps:
 
 - script: docker tag $(imageName):$(NBGV_SemVer1) $(imageName):latest
   displayName: docker set latest tag
-  condition: and(succeeded(), eq(variables['NBGV_PublicRelease'], true)
+  condition: and(succeeded(), eq(variables['NBGV_PublicRelease'], true))
 
 - script: docker tag $(imageName):$(NBGV_SemVer1) $(imageName):pre
   displayName: docker set latest tag
-  condition: and(succeeded(), eq(variables['NBGV_PublicRelease'], false)
+  condition: and(succeeded(), eq(variables['NBGV_PublicRelease'], false))
