--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,5 +31,5 @@ steps:
   condition: and(succeeded(), eq(variables['NBGV_PublicRelease'], true))
 
 - script: docker tag $(imageName):$(NBGV_SemVer1) $(imageName):pre
-  displayName: docker set latest tag
+  displayName: docker set pre tag
   condition: and(succeeded(), eq(variables['NBGV_PublicRelease'], false))
